--- a/public/index.html
+++ b/public/index.html
@@ -15,42 +15,9 @@
     </style>
   </head>
   <body>
-    <h1>Hitung Mundur 24 Jam</h1>
+    <h1>Data Firestore Akan Segera Update</h1>
     <div id="countdown"></div>
 
-    <script>
-      const now = new Date();
-      const target = new Date(now.getTime() + 24 * 60 * 60 * 1000); // Tambahkan 24 jam
-
-      function hitungMundur() {
-        let sisaWaktu = target.getTime() - now.getTime();
-        console.log(sisaWaktu);
-
-        const countdownElement = document.getElementById('countdown');
-
-        const intervalId = setInterval(() => {
-          let jam = Math.floor(
-            (sisaWaktu % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
-          );
-          let menit = Math.floor((sisaWaktu % (1000 * 60 * 60)) / (1000 * 60));
-          let detik = Math.floor((sisaWaktu % (1000 * 60)) / 1000);
-
-          sisaWaktu = sisaWaktu - 1000;
-
-          countdownElement.innerHTML = jam + ':' + menit + ':' + detik;
-          console.log(sisaWaktu);
-
-          if (sisaWaktu < 0) {
-            clearInterval(intervalId);
-            countdownElement.innerHTML = 'Berhasil Update';
-            setTimeout(() => {
-              hitungMundur()
-            }, 1000); // Tunggu 1 detik sebelum memulai hitung mundur baru
-          }
-        }, 1000);
-      }
-
-      hitungMundur();
-    </script>
+    <script src="index.js"></script>
   </body>
 </html>
