--- a/public/home.html
+++ b/public/home.html
@@ -22,7 +22,7 @@
       const now = new Date();
       // const target = new Date(now.getTime() + 24 * 60 * 60 * 1000); // Tambahkan 24 jam
       
-      const timer = '<%= timer %>'
+      // const timer = '<%= timer %>'
       function hitungMundur() {
         let sisaWaktu = parseInt(timer, 10) - now.getTime();
 
